load("@rules_rust//rust:defs.bzl", "rust_library")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")

rust_library(
    name = "everestrs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crate_index//:argh",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:thiserror",
        "@cxx.rs//:cxx",
        "@everest-framework//everestrs/everestrs:everestrs_bridge",
        "@everest-framework//everestrs/everestrs:everestrs_sys",
        "@everest-framework//everestrs/everestrs-build:everestrs-build",
    ],
)

run_binary(
    name = "everestrs_bridge/generated",
    srcs = ["src/lib.rs"],
    outs = [
        "src/lib.rs.cc",
        "src/lib.rs.h",
    ],
    args = [
        "$(location src/lib.rs)",
        "-o",
        "$(location src/lib.rs.h)",
        "-o",
        "$(location src/lib.rs.cc)",
    ],
    tool = "@cxx.rs//:codegen",
)

cc_library(
    name = "everestrs_bridge",
    srcs = ["src/lib.rs" + ".cc"],
    copts = ["-std=c++17"],
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@everest-framework//:framework",
        "@everest-framework//everestrs/everestrs:everestrs_bridge/include",
        "@everest-framework//everestrs/everestrs:everestrs_sys_include",
    ],
)

cc_library(
    name = "everestrs_sys",
    srcs = ["src/everestrs_sys.cpp"],
    copts = ["-std=c++17"],
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@everest-framework//:framework",
        "@everest-framework//everestrs/everestrs:everestrs_bridge/include",
        "@everest-framework//everestrs/everestrs:everestrs_sys_include",
    ],
    alwayslink = True,
)

cc_library(
    name = "everestrs_bridge/include",
    hdrs = ["src/lib.rs" + ".h"],
    include_prefix = "everestrs",
    linkstatic = 1,
)

cc_library(
    name = "everestrs_sys_include",
    hdrs = ["src/everestrs_sys.hpp"],
    include_prefix = "everestrs",
    linkstatic = 1,
    deps = ["@cxx.rs//:core"],
)
