[package]
name = "everestrs"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.10"
cxx = { version = "1.0.107", features = ["c++17"] }
everestrs-build = { workspace = true }
log = "0.4.20"
mockall = "0.12.1"
mockall_double = "0.3.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.48"

[features]
build_bazel = []
